--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Clothing store"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/crown.svg" />
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico?v=2”/>
     <link rel="stylesheet" href="../src/fonts/fonts.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>The Cloth Store</title>
+    <title>The Clothing Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
