--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Clothing store"
     />
-    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico?v=2”/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="../src/fonts/fonts.min.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
